--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -335,5 +335,33 @@ series = {SASOW '12}
     title = {Distributed Pricing For Embedded ATM Networks},
     booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
     year = {1994},
-    pages = {1053--1063}
+    pages = {1053--1063},
+}
+
+@inproceedings{Chen-SOCC-2014,
+author = {Chen, Liuhua and Shen, Haiying and Sapra, Karan},
+title = {Distributed Autonomous Virtual Resource Management in Datacenters Using Finite-Markov Decision Process},
+year = {2014},
+isbn = {9781450332521},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2670979.2671003},
+doi = {10.1145/2670979.2671003},
+booktitle = {Proceedings of the ACM Symposium on Cloud Computing},
+pages = {1–13},
+numpages = {13},
+keywords = {MDP, Resource management, Cloud computing},
+location = {Seattle, WA, USA},
+series = {SOCC '14},
+}
+
+@article{masanet2020recalibrating,
+  title={Recalibrating global data center energy-use estimates},
+  author={Masanet, Eric and Shehabi, Arman and Lei, Nuoa and Smith, Sarah and Koomey, Jonathan},
+  journal={Science},
+  volume={367},
+  number={6481},
+  pages={984--986},
+  year={2020},
+  publisher={American Association for the Advancement of Science},
 }
