--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -22,6 +22,8 @@ necessary solutions for building a working prototype system.
   The mechanism of the idle resource pooling allows utilizing external
   clouds when only needed.
 
+\item [Business Model:] charging, authentification and authorization.
+
 \item[Data Migration:]
   The location of data is critical.
   A possible approach is to migrate data at coarser timescale, based
@@ -39,4 +41,6 @@ necessary solutions for building a working prototype system.
 \item[Source Routing:] We assumed that it is possible to select network paths
   when assigning a job, probabaly using SRv6 or other source routing mechanism.
 
+\item[Dependency among micro services:]~\cite{Suresh-SOA-SOCC2017}
+  
 \end{description}
