--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -20,7 +20,7 @@ Zhang {\em et al.}~\cite{Xu2017-zenith,Zhang2017-VMauction}
 proposed an online primal-dual optimization for VM auction in IaaS
 clouds for welfare and profit maximization.
 Distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
-load balancing within a data center\cite{Rikhtegar2021BiTEAD}.
+load balancing within a data center\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014}.
 pricing used for load-balancing in clouds\cite{Song-2014,Ren-2017}.
 
 Xu {\em et al.}~\cite{Xu2017-zenith} proposed the edge computing
@@ -49,7 +49,7 @@ We were inspired by the concept of micro cloud services to apply packet
 switching techniques to distributed heterogeneous clouds, and have
 revisited congestion pricing.
 To the best of our knowledge, our work is unique in using a convex
-cost function for idle resource pooling.
+cost function for idle-resource pooling.
 
 %%data migration\cite{Pu2015-geodistdata}.
 %%distributed data store\cite{Shima2012,Tahoe-2008}.
