--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -30,7 +30,12 @@ Simulation scenarios:
   \item	{\bf monotonic function:} same as above but use monotonic cost
         function.
   \item	{\bf randomize:} 4 nodes and 4 links with randomization
+  \item {\bf comparison:} compared with, no idle-resource pooling
   \item	{\bf surge:} same as above but with a request surge at one location
+  \item	{\bf edge computing:} 2 nodes (big and small) and 1 link, the
+    users are closer to the small node. 2 types josb (interactive,
+    data intensive).  show interactive jobs are on the small node,
+    data intensive jobs are on the big node.
   \item {\bf premium service:} 4 nodes with 3 standard and 1 premium services.
   \item	{\bf complex?:} realistic scenario
 \end{enumerate}
