--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -49,8 +49,9 @@ it might open up new possibilities to apply packet switching
 techniques to handling microservice jobs.
 
 %% energy saving?
-Lastly, we need to take energy saving into consideration as it is
-essential for future clouds, or even for future computing as a whole.
+In addition, we should take energy saving into consideration as it is
+essential for future clouds, or even for future computing as a
+whole~\cite{masanet2020recalibrating}.
 
 \subsection{Cloud Morphing Vision}
 
@@ -61,6 +62,9 @@ heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
 transforms the locations of the resources and their connections.
 
+Microservice jobs are assigned so as to reduce the excecution cost that
+consists of computing cost, communication cost with the user, access
+cost to database, and other factors.
 For examples, an interactive task will follow the user when the user
 moves, while a data intensive task will stay close to the data
 regardless of the user location.
@@ -70,11 +74,12 @@ Moreover, services are inherently fault-tolerant and resilient
 against outages or disasters since faulty resources are
 automatically evicted from the resource pool.
 
-The physical resource management becomes simpler, since physical nodes
-can be easily attached to or detached from the resource pool.
+From the operational perspective, the physical resource management
+becomes simpler, since physical nodes can be easily attached to or
+detached from the resource pool.
 When there is a consistent hotspot, it can be alleviated or solved by
-placing new resources close to the hotspot and attaching them to the
-resource pool.
+placing new resources close to the hotspot and then attaching them to
+the resource pool at a convenient time.
 
 Diverse resources would be owned and managed by different parties.
 It requires loose management of resources, as small parties cannot
