update for 6/17 morning

--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -365,3 +365,105 @@ series = {SOCC '14},
   year={2020},
   publisher={American Association for the Advancement of Science},
 }
+
+@article{Mastelic-2015,
+author = {Mastelic, Toni and Oleksiak, Ariel and Claussen, Holger and Brandic, Ivona and Pierson, Jean-Marc and Vasilakos, Athanasios V.},
+title = {Cloud Computing: Survey on Energy Efficiency},
+year = {2014},
+issue_date = {January 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {47},
+number = {2},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/2656204},
+doi = {10.1145/2656204},
+abstract = {Cloud computing is today’s most emphasized Information and Communications Technology (ICT) paradigm that is directly or indirectly used by almost every online user. However, such great significance comes with the support of a great infrastructure that includes large data centers comprising thousands of server units and other supporting equipment. Their share in power consumption generates between 1.1% and 1.5% of the total electricity use worldwide and is projected to rise even more. Such alarming numbers demand rethinking the energy efficiency of such infrastructures. However, before making any changes to infrastructure, an analysis of the current status is required. In this article, we perform a comprehensive analysis of an infrastructure supporting the cloud computing paradigm with regards to energy efficiency. First, we define a systematic approach for analyzing the energy efficiency of most important data center domains, including server and network equipment, as well as cloud management systems and appliances consisting of a software utilized by end users. Second, we utilize this approach for analyzing available scientific and industrial literature on state-of-the-art practices in data centers and their equipment. Finally, we extract existing challenges and highlight future research directions.},
+journal = {ACM Comput. Surv.},
+month = {dec},
+articleno = {33},
+numpages = {36},
+keywords = {network, Cloud computing, cloud management system, data center, servers, energy efficiency, appliances}
+}
+
+@article{Shafiei-2022,
+author = {Shafiei, Hossein and Khonsari, Ahmad and Mousavi, Payam},
+title = {Serverless Computing: A Survey of Opportunities, Challenges, and Applications},
+year = {2022},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/3510611},
+doi = {10.1145/3510611},
+abstract = {The emerging serverless computing paradigm has attracted attention from both academia and industry. This paradigm brings benefits such as less operational complexity, a pay-as-you-go pricing model, and an auto-scaling feature. The paradigm opens up new opportunities and challenges for cloud application developers. In this paper, we present a comprehensive overview of the past development as well as the recent advances in research areas related to serverless computing. First, we survey serverless applications introduced in the literature. We categorize applications in eight domains and separately discuss the objectives and the viability of the serverless paradigm along with challenges in each of those domains. We then classify those challenges into nine topics and survey the proposed solutions. Finally, we present the areas that need further attention from the research community and identify open problems.},
+note = {Just Accepted},
+journal = {ACM Comput. Surv.},
+month = {jan},
+keywords = {Function-as-a-Service (FaaS), Serverless Computing, Cloud Services}
+}
+
+@article{Lopez-2015,
+author = {Garcia Lopez, Pedro and Montresor, Alberto and Epema, Dick and Datta, Anwitaman and Higashino, Teruo and Iamnitchi, Adriana and Barcellos, Marinho and Felber, Pascal and Riviere, Etienne},
+title = {Edge-Centric Computing: Vision and Challenges},
+year = {2015},
+issue_date = {October 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {45},
+number = {5},
+issn = {0146-4833},
+url = {https://doi.org/10.1145/2831347.2831354},
+doi = {10.1145/2831347.2831354},
+abstract = {In many aspects of human activity, there has been a continuous struggle between the forces of centralization and decentralization. Computing exhibits the same phenomenon; we have gone from mainframes to PCs and local networks in the past, and over the last decade we have seen a centralization and consolidation of services and applications in data centers and clouds. We position that a new shift is necessary. Technological advances such as powerful dedicated connection boxes deployed in most homes, high capacity mobile end-user devices and powerful wireless networks, along with growing user concerns about trust, privacy, and autonomy requires taking the control of computing applications, data, and services away from some central nodes (the "core") to the other logical extreme (the "edge") of the Internet. We also position that this development can help blurring the boundary between man and machine, and embrace social computing in which humans are part of the computation and decision making loop, resulting in a human-centered system design. We refer to this vision of human-centered edge-device based computing as Edge-centric Computing. We elaborate in this position paper on this vision and present the research challenges associated with its implementation.},
+journal = {SIGCOMM Comput. Commun. Rev.},
+month = {sep},
+pages = {37–42},
+numpages = {6},
+keywords = {cloud computing, fog computing, decentralized systems, peer-to-peer}
+}
+
+@article{Greenberg-2009,
+author = {Greenberg, Albert and Hamilton, James and Maltz, David A. and Patel, Parveen},
+title = {The Cost of a Cloud: Research Problems in Data Center Networks},
+year = {2009},
+issue_date = {January 2009},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {39},
+number = {1},
+issn = {0146-4833},
+url = {https://doi.org/10.1145/1496091.1496103},
+doi = {10.1145/1496091.1496103},
+abstract = {The data centers used to create cloud services represent a significant investment in capital outlay and ongoing costs. Accordingly, we first examine the costs of cloud service data centers today. The cost breakdown reveals the importance of optimizing work completed per dollar invested. Unfortunately, the resources inside the data centers often operate at low utilization due to resource stranding and fragmentation. To attack this first problem, we propose (1) increasing network agility, and (2) providing appropriate incentives to shape resource consumption. Second, we note that cloud service providers are building out geo-distributed networks of data centers. Geo-diversity lowers latency to users and increases reliability in the presence of an outage taking out an entire site. However, without appropriate design and management, these geo-diverse data center networks can raise the cost of providing service. Moreover, leveraging geo-diversity requires services be designed to benefit from it. To attack this problem, we propose (1) joint optimization of network and data center resources, and (2) new systems and mechanisms for geo-distributing state.},
+journal = {SIGCOMM Comput. Commun. Rev.},
+month = {dec},
+pages = {68–73},
+numpages = {6},
+keywords = {costs, network challenges, cloud-service data centers}
+}
+
+
+@book{nadareishvili2016microservice,
+  title={Microservice architecture: aligning principles, practices, and culture},
+  author={Nadareishvili, Irakli and Mitra, Ronnie and McLarty, Matt and Amundsen, Mike},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@inproceedings{aazam2015dynamic,
+  title={Dynamic resource provisioning through fog micro datacenter},
+  author={Aazam, Mohammad and Huh, Eui-Nam},
+  booktitle={2015 IEEE international conference on pervasive computing and communication workshops (PerCom workshops)},
+  pages={105--110},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{varghese2016challenges,
+  title={Challenges and opportunities in edge computing},
+  author={Varghese, Blesson and Wang, Nan and Barbhuiya, Sakil and Kilpatrick, Peter and Nikolopoulos, Dimitrios S},
+  booktitle={2016 IEEE International Conference on Smart Cloud (SmartCloud)},
+  pages={20--26},
+  year={2016},
+  organization={IEEE}
+}
