--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -23,7 +23,8 @@ infrastructure layer which does not require human operators.
 
 %% Edge computing and micro datacenters
 We also consider two recent trends in cloud computing.
-One trend is edge computing and micro datacenters.
+One trend is edge computing~\cite{Lopez-2015} and
+micro datacenters~\cite{Greenberg-2009}.
 Small-scale datacenters with a few racks or even a couple of servers
 can be placed at locations closer to the users, to reduce latencies
 or to store sensitive data on premise, and make them act as part of
@@ -37,7 +38,8 @@ environment so that it will be no longer necessary to micromanage
 computing resources.
 
 %% serverless, micro services
-Another trend is microservices and serverless computing in which
+Another trend is microservices~\cite{nadareishvili2016microservice}
+and serverless computing~\cite{Shafiei-2022} in which
 a cloud service is composed of a collection of loosely-coupled
 lightweight services.
 Each microservice is ephemeral and short-lived, and can be executed
@@ -51,7 +53,7 @@ techniques to handling microservice jobs.
 %% energy saving?
 In addition, we should take energy saving into consideration as it is
 essential for future clouds, or even for future computing as a
-whole~\cite{masanet2020recalibrating}.
+whole~\cite{Mastelic-2015,masanet2020recalibrating}.
 
 \subsection{Cloud Morphing Vision}
 
