--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -11,14 +11,15 @@ In this paper, we envision future distributed cloud services with
 abundant heterogeneous computing resources,
 and propose a dynamic pricing model as feedback control for
 distributed resource management.
-In this model, the resource cost is a function of the load of the
-resource, and the required resources for a job are allocated by a
-simple cost minimization algorithm.  This simple mechanism realizes
-automatic load balancing and idle-resource pooling within the cloud,
-and allows operators to loosely control the utilization of each
-resource by manipulating the cost function. We examine different cost
-tuning methods for adjusting utilization, and prove the system to be
-robust against changing conditions. 
+In this model, the pseudo cost of a resource is a function of the
+load, and the required resources for a job are allocated by a simple
+cost minimization algorithm.
+This simple mechanism enables automatic load-balancing and
+idle-resource pooling within the cloud, and allows operators to
+loosely control the utilization of each resource by manipulating the
+cost function. We examine different cost tuning methods for adjusting
+utilization, and prove the system to be robust against changing
+conditions. 
 
 \end{abstract}
 
