--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -17,7 +17,7 @@ capacity.
 Another key idea is {\em idle-resource pooling} that tries to put resources
 into idle state when possible for energy saving.
 We proposed a convex cost function that enables idle-resource pooling
-with congestion pricing.
+by modified congestion pricing.
 
 \subsection{Pseudo Cost Functions}
 
@@ -64,7 +64,7 @@ The standatd monotonic function is deafined as:
 	f(\rho) = \frac{\rho^{5}}{1 - \rho} + 1
 \end{equation*}
 to roughly match the standard convex function in $[.5, .75]$,
-the working range shown in the next subsection.
+the working load range explained in the next subsection.
 
 Note that the standard forms are defined just for convenience, and
 other functions with a similar shape in $[0,1]$ also work for our
@@ -73,7 +73,8 @@ purposes.
 \subsection{Idle-Resource Pooling in Action}
 
 The behavior of idle-resource pooling by the convex cost function is
-illustrated by the following examples.
+illustrated by the following examples in Figure~\ref{fig:4node} and
+Figure~\ref{fig:4node-ratio}.
 
 \begin{figure*}[tb]
   \begin{minipage}{1.0\columnwidth}
@@ -96,13 +97,15 @@ illustrated by the following examples.
 \end{figure*}
 
 Assume a pool of 4 equivalent resources with the standard convex
-cost function in Figure~\ref{fig:4node}.
+cost function.
 Also, assume that micro jobs are continuously assigned to the
 system; each micro job is much smaller than the capacity of a
 resource.
 
-The initial system load $\sum \rho$ is $0$, and gradually increased
-up to $3.5$, here, load $1.0$ is the capacity of a single resource.
+The initial system load $\sum \rho$ is $0$, and gradually increased up
+to $3.5$ at time 350. After time 400, the system load is gradually
+decreasesd back to $0$ at time 750.
+Here, load $1.0$ is the capacity of a single resource. 
 Initially, all resources in the pool are idle, and their costs are
 all $f(0)= 2$.
 First, one resource $r_{0}$ is randomly selected for allocation, and its
@@ -120,8 +123,7 @@ when $\sum \rho$ reaches $3.0$ so that the loads grow beyond $.75$
 up to $\sum \rho = 3.5$ with $\rho = .875$ for each.
 
 When the system load decreases, the process is reversed.
-The system load is gradually decreased from $3.5$.
-After reaching $\rho = .5$ for all the resource,
+After reaching $\rho = .5$ for all,
 one resource with the lowest load $\rho < .5$ becomes more expensive
 than the others.
 This one is less preferred for subsequent assignments, and quickly
@@ -131,12 +133,12 @@ $\rho$ in $[.5, .75]$. It repeats for the remaining ones.
 It is easy to see how the number of active resources changes when
 there are more resources.
 When the number of active resources is increasing, the load of each
-active resource stay at $\rho = .75$.
+active resource stay at around $\rho = .75$.
 On the other hand, when the number of active resources is decreasing,
-the load of each active resource stay at $\rho = .5$.
+the load of each active resource stay at around $\rho = .5$.
 In short, when all resources are equal, the system tries to maintain
-the load of active resources in the range $[.5, .75]$, while keeping
-idle resources as much as possible.
+the load of active resources in the {\em working load range}
+$[.5, .75]$, while keeping idle resources as much as possible.
 
 When resources are not equal, the behavior becomes more complex, but
 the underlying mechanisms are the same.
@@ -145,13 +147,13 @@ that is $8 f_{r_{0}} = 4 f_{r_{1}} = 2 f_{r_{2}} = f_{r_{3}}$ in
 Figure~\ref{fig:4node-ratio}.
 To activate $r_{1}$, the load of $r_{0}$ goes up to $.84$ to satisfy:
 $f_{r_{1}}(0) = 4 = f_{r_{0}}(.84)$.
-When $r_{1}$ is moving towards idle, the load of $r_{0}$ is $.75$ to
-satisfy: $f_{r_{1}}(.5) = 2 = f_{r_{0}}(.75)$
+When $r_{1}$ is moving towards idle after time 550, the load
+of $r_{0}$ is $.75$ to satisfy: $f_{r_{1}}(.5) = 2 = f_{r_{0}}(.75)$
 
 For unequal resources in general, the required load to trigger new
 resource allocation would be higher than $\rho = .75$ for the already
 active ones to match the cost $f(0)$ for the new one, but the load
-will not go much further as the slope of the function is steep.
+will not go much further as the slope of the cost function is steep.
 Similarly, when the most expensive one among active resources becomes
 idle, the load of the remaining ones stay at the matching cost at
 $f(.5)$ for the deactivating one.
@@ -161,7 +163,7 @@ a resource with the minimum cost).
 However, our goal is not to achieve the theoretical optimum but to
 enable loose automatic distributed load balancing.
 
-\subsection{Variations}
+\subsection{Manipulating the Cost Function}
 \label{sec:variation}
 
 The utilization of a resource can be manipulated by modifying the cost
@@ -181,22 +183,24 @@ function of the resource.
         Similary, an economy service can be made by raising the target load.
 \end{description}
 
-\subsection{Jobs Assignment}
+\subsection{Job Assignment}
 
 We use a simple micro job model that defines the required resources
 for a micro job as $J(p, q, r, s)$ where 
 $p$: the number of micro containers, 
-$q$: frontend communications with the user, 
-$r$: backend communications with data objects (e.g., database), and
+$q$: frontend communication with the user, 
+$r$: backend communication with data objects (e.g., database), and
 $s$: the number of time slots.
-For simplicity, we do not distinguish directions of communications for
-$q$ and $r$, and assume only one user and one data object per job.
+For simplicity in the paper, we do not distinguish directions of
+communications for $q$ and $r$, and assume only one user and one data
+object per job.
 The unit is one micro container for $p$, 1Mbps for $q$ and $r$, and 1
 second for $s$.
 
-Optionally, a job can specify weights for the cost calculation with
-$p$, $q$, $r$: e.g., an interactive job may raise the weight for the
-frontend communication to place the job close to the user.
+Optionally, a job can be associated with weights for the cost
+calculation with $p$, $q$, and $r$: e.g., an interactive job may raise
+the weight for the frontend communication to place the job close to
+the user.
 
 To instantiate a micro job requested from a user, the system finds the
 best node to allocate the required resource for $J$: $p$, $q$ and $r$
@@ -204,23 +208,32 @@ for duration $s$.
 
 The pseudo cost $E$ to host job $j$ for a unit time at node $i$ for
 user $m$ and data object $o$ is:
+\begin{equation*}
+	E(j, i)     = H(j,i) + G(j,i,m,o)
+\end{equation*}
+here, $H(j, i)$ is the computing cost to run $j$ at $i$, and
+$G(j, i, m, o)$ is the communication cost to run $j$ at $i$
+between $m$ and $o$.
 \begin{eqnarray*}
-&&  E(j, i)     = H(j,i) + G(j,i,m,o) \\
 &&  H(j,i)      = p \cdot f(\rho_{i}) \\
 &&  G(j,i,m,o)  = q \cdot \smashoperator{\sum_{l \in path(m,i)}} f(\rho_{l}) + r \cdot \smashoperator{\sum_{l \in path(i,o)}} f(\rho_{l})
 \end{eqnarray*}
-here, $H(j, i)$ is the computing cost to run $j$ at $i$, and
-$G(j, i, m, o)$ is the communication cost to run $j$ at $i$
-between $m$ and $o$, and
-$path(m,i)$ is a set of links in the best path from $m$ to $i$.
+also, $path(m,i)$ is a set of links from $m$ to $i$ (e.g., the
+shortest path weighted by cost).
 
-To assign Job $j$, the system simply finds
+To assign Job $j$, the system simply finds the lowest cost node $i$:
 \begin{equation*}
 	argmin_{i} \: E(j, i)
 \end{equation*}
-and then, assign $j$ to $i$.
 
-\subsection{Misc}
+\subsection{System model}
+
+A user requests a series of jobs to a nearby frontend server.
+The frontend server finds the required resources for the requested job,
+identifies the locations of the user and the required data object,
+and asks available resources (or their proxies) for the current costs.
+The area for inquiry could be within proximity to the path between the
+user and the data object.
 
 The load of a resource can be measured in a number of ways.  Most
 resources have some form of load report functions built-in.
