--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -7,21 +7,18 @@ MacKie-Mason {\em et al.}~\cite{pricing-internet-1994}, both in 1994.
 Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
 optimization framework for fair allocation, which inspired a large
 number of the following
-work~\cite{gibbens1999resource,Henderson2001,Briscoe2003-M3I}.
+work~\cite{Sen-2013,gibbens1999resource,Henderson2001,Briscoe2003-M3I}.
+Congestion pricing are also applied to cloud
+computing~\cite{Wang-hotcloud2010,Song-2014,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
 
-Congestion pricing are also applied to cloud computing:
-For cloud computing services~\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015},
-For cloud computing spot instances~\cite{Song-INFOCOM2017}.
-
-Resource allocation for Edge Computing or Micro Data Centers:
-Most approaches use some form of optimization and many employ auction
-models.
-Zhang {\em et al.}~\cite{Xu2017-zenith,Zhang2017-VMauction}
-proposed an online primal-dual optimization for VM auction in IaaS
-clouds for welfare and profit maximization.
-Distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
-load balancing within a data center\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014}.
-pricing used for load-balancing in clouds\cite{Song-2014,Ren-2017}.
+Resource allocation for edge computing and micro data centers also has
+a rich collection of work, most approaches are based on some form of
+optimization and many employ auction models.
+The topics are ranging from VM auctions in IaaS for welfare and profit
+maximization~\cite{Xu2017-zenith,Zhang2017-VMauction},
+load balancing within a data center~\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014},
+to
+distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
 
 Xu {\em et al.}~\cite{Xu2017-zenith} proposed the edge computing
 infrastructure layer similar to ours, separating the cloud
