--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -93,7 +93,7 @@ To realize such systems, it requires various technical advances across
 many fields.  Among other things, new autonomous resource management
 model is needed for distributed diverse cloud resources.
 
-\subsection{Resource Management Model}
+\subsection{Resource Management}
 
 %% resource allocation problems are NP-hard
 %% even harder for distributed heterogeneous resources
