--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -1,3 +1,76 @@
+\subsection{Job Assignment}
+
+\begin{figure}[tb]
+  \begin{center}
+    \includegraphics[width=1.0\columnwidth]{system.pdf}
+    \vspace{-2.0ex}
+    \caption{System model}
+    \label{fig:system}
+  \end{center}
+\end{figure}
+
+A simple system configuration with 2 data centers and 2 micro
+datacenters is shown in Figure~\ref{fig:system}.
+When a user requests a service to a nearby service server,
+the service server instantiates the requested service into a series of
+micro service jobs.
+The server finds the required resources for each job,
+identifies the locations of the user and the required data object,
+asks available resources (or their proxies) for the current costs,
+and assigns the job to the node with the lowest pseudo cost.
+The area for cost inquiry could be within proximity to the path
+between the user and the data object.
+
+The load of a resource can be measured in a number of ways.  Most
+resources have some form of load report functions built-in.
+A load value does not need to be precise, and a rough approximation is
+enough for loose resource management.
+On the other hand, if each allocation is not small enough both in size
+and duration, the loads may not converge as expected.
+That is, micro service is the enabler for this approach.
+
+We use a simple micro job model that defines the required resources
+for a micro job as $J(p, q, r, s)$ where 
+$p$ is the number of micro containers, 
+$q$ is frontend communication with the user, 
+$r$ is backend communication with data objects (e.g., database), and
+$s$ is the number of time slots.
+For simplicity in the paper, we do not distinguish directions of
+communications for $q$ and $r$, and assume only one user and one data
+object per job.
+The unit is one micro container for $p$, 1Mbps for $q$ and $r$, and 1
+second for $s$.
+
+Optionally, a job can be associated with weights for the cost
+calculation with $p$, $q$, and $r$: e.g., an interactive job may raise
+the weight for the frontend communication to place the job close to
+the user.
+
+To instantiate a micro job requested from a user, the system finds the
+best node to allocate the required resource for $J$: $p$, $q$ and $r$
+for duration $s$.
+
+The pseudo cost $E$ to host job $j$ for a unit time at node $i$ for
+user $m$ and data object $o$ is:
+\begin{equation*}
+	E(j, i)     = H(j,i) + G(j,i,m,o)
+\end{equation*}
+here, $H(j, i)$ is the computing cost to run $j$ at $i$, and
+$G(j, i, m, o)$ is the communication cost to run $j$ at $i$
+between $m$ and $o$.
+\begin{eqnarray*}
+&&  H(j,i)      = p \cdot f(\rho_{i}) \\
+&&  G(j,i,m,o)  = q \cdot \smashoperator{\sum_{l \in path(m,i)}} f(\rho_{l}) + r \cdot \smashoperator{\sum_{l \in path(i,o)}} f(\rho_{l})
+\end{eqnarray*}
+$f(\rho)$ is the cost fuction of a resource load, and $path(m,i)$ is a set
+of links from $m$ to $i$ (e.g., the shortest path weighted by cost).
+
+To assign Job $j$, the system simply finds the lowest cost node $i$:
+\begin{equation*}
+	argmin_{i} \: E(j, i)
+\end{equation*}
+
+\subsection{Pseudo Cost Functions}
 
 %% idea: mechanics model instead of optimization
 
@@ -18,8 +91,6 @@ Another key idea is {\em idle-resource pooling} that tries to put resources
 into idle state when possible for energy saving.
 We proposed a convex cost function that enables idle-resource pooling
 by modified congestion pricing.
-
-\subsection{Pseudo Cost Functions}
 
 A pseudo cost function in our model maps the load of a resource
 $\rho \in [0, 1]$ to the corresponding cost.
@@ -183,64 +254,4 @@ function of the resource.
         Similary, an economy service can be made by raising the target load.
 \end{description}
 
-\subsection{Job Assignment}
-
-We use a simple micro job model that defines the required resources
-for a micro job as $J(p, q, r, s)$ where 
-$p$: the number of micro containers, 
-$q$: frontend communication with the user, 
-$r$: backend communication with data objects (e.g., database), and
-$s$: the number of time slots.
-For simplicity in the paper, we do not distinguish directions of
-communications for $q$ and $r$, and assume only one user and one data
-object per job.
-The unit is one micro container for $p$, 1Mbps for $q$ and $r$, and 1
-second for $s$.
-
-Optionally, a job can be associated with weights for the cost
-calculation with $p$, $q$, and $r$: e.g., an interactive job may raise
-the weight for the frontend communication to place the job close to
-the user.
-
-To instantiate a micro job requested from a user, the system finds the
-best node to allocate the required resource for $J$: $p$, $q$ and $r$
-for duration $s$.
-
-The pseudo cost $E$ to host job $j$ for a unit time at node $i$ for
-user $m$ and data object $o$ is:
-\begin{equation*}
-	E(j, i)     = H(j,i) + G(j,i,m,o)
-\end{equation*}
-here, $H(j, i)$ is the computing cost to run $j$ at $i$, and
-$G(j, i, m, o)$ is the communication cost to run $j$ at $i$
-between $m$ and $o$.
-\begin{eqnarray*}
-&&  H(j,i)      = p \cdot f(\rho_{i}) \\
-&&  G(j,i,m,o)  = q \cdot \smashoperator{\sum_{l \in path(m,i)}} f(\rho_{l}) + r \cdot \smashoperator{\sum_{l \in path(i,o)}} f(\rho_{l})
-\end{eqnarray*}
-also, $path(m,i)$ is a set of links from $m$ to $i$ (e.g., the
-shortest path weighted by cost).
-
-To assign Job $j$, the system simply finds the lowest cost node $i$:
-\begin{equation*}
-	argmin_{i} \: E(j, i)
-\end{equation*}
-
-\subsection{System model}
-
-A user requests a series of jobs to a nearby frontend server.
-The frontend server finds the required resources for the requested job,
-identifies the locations of the user and the required data object,
-and asks available resources (or their proxies) for the current costs.
-The area for inquiry could be within proximity to the path between the
-user and the data object.
-
-The load of a resource can be measured in a number of ways.  Most
-resources have some form of load report functions built-in.
-A load value does not need to be precise, and a rough approximation is
-enough for loose resource management.
-
-On the other hand, if each allocation is not small enough both in size
-and duration, the loads may not converge as expected.
-That is, micro service is the enabler for this approach.
 
