update for 6/20 morning

--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -104,7 +104,8 @@ management is assumed.
 %% our idea: use congestion pricing mechanism for automatic load management
 To this end, we employ dynamic pricing for decentralized resource
 allocation which works as backpressure against congestion.
-By design, serious congestion never happens in the system.
+By design, serious congestion never happens in the system as long as
+some of the resources remain available in the resource pool.
 
 We use pseudo cost for manipulating resource allocation.
 Here, pseudo cost is not an actual monetary charge but it is used to
