--- a/papers/conext2022/related.tex
+++ b/papers/conext2022/related.tex
@@ -27,9 +27,8 @@ but an auction model is proposed for resource allocation.
 
 Exponential cost growth as a function of load is well known in packet
 switching networks (e.g., M/M/1 queue and CSMA/CD Ethernet).
-We have modified it to make it convex for idle resource pooling, and
-exploit it in the pseudo cost function.
-A similar idea was found in \cite{Murphy94distributedpricing} where
+The idea to use such cost functions for resource management
+was in \cite{Murphy94distributedpricing} where
 Murphy {\em et al.} used a cost function for distributed bandwidth
 allocation in ATM networks in 1994.
 Their cost function is a barrier function for utility optimization
