--- a/papers/conext2022/model.tex
+++ b/papers/conext2022/model.tex
@@ -247,7 +247,8 @@ For minor adjustment, one can use an additive form,
 $f'(\rho) = f(\rho) + \Delta$.
 
 The {\bf idle-state can be made stickier} by raising the cost at $\rho = 0$:
-e.g., $f'(\rho) = n (2\rho - 1)^{2}/(1 - \rho^{n}) + 1$.
+e.g., to raise the cost at $\rho = 0$ by a factor of $n$,
+$f'(\rho) = n (2\rho - 1)^{2}/(1 - \rho^{n}) + 1$.
 
 A {\bf premium service} can be realized by lowering the target load so
 that premium jobs are always assigned to lightly loaded resources, 
